bk_ida/gccida/g2/cleanup_barriers
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:571:4: error: expected ';' after expression
rtx v2; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:571:5: error: use of undeclared identifier 'v2'
rtx v2; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:572:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:572:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:580:1: error: use of undeclared identifier 'v2'
v2 = rtx; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:582:17: error: use of undeclared identifier 'v2'
if ( *( _WORD *)v2 != 35 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:584:1: error: use of undeclared identifier 'nonnote_insn'
nonnote_insn = prev_nonnote_insn( v2); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:584:35: error: use of undeclared identifier 'v2'
nonnote_insn = prev_nonnote_insn( v2); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:585:17: error: use of undeclared identifier 'nonnote_insn'
if ( *( _WORD *)nonnote_insn == 35 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:587:17: error: use of undeclared identifier 'v2'
if ( *( _WORD *)v2 != 35 ) 
                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:589:14: error: use of undeclared identifier 'v2'
delete_insn( v2); 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:592:12: error: expected ')'
if ( ( rtx)v2[1] == nonnote_insn ) 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:592:4: note: to match this '('
if ( ( rtx)v2[1] == nonnote_insn ) 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:600:16: error: use of undeclared identifier 'v2'
reorder_insns( v2, v2, nonnote_insn); 
               ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:600:20: error: use of undeclared identifier 'v2'
reorder_insns( v2, v2, nonnote_insn); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/jump.c:600:24: error: use of undeclared identifier 'nonnote_insn'
reorder_insns( v2, v2, nonnote_insn); 
                       ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/cleanup_barriers/src/obj/jump.o] Error 1
